# CameraCapture

./: .gitignore  CMakeLists.txt  CaptureRTSP.py  README.md  client.py  cross.cmake  main.py  server.py  setup.py  testcode.py
Capture/: CMakeLists.txt
Capture/src/: main.cpp
PiRecord/: Capture.py  CaptureEmbed.py  CaptureMode.py  CaptureMultiproc.py  CaptureMultiproc_shm_array.py  CaptureMultiproc_shm_q.py  CaptureUDP.py  CaptureUDP_loopback.py  FileServer.py  Reacord.py  Record.py  StreamImages.py  __init__.py
RTSPCapture/: CMakeLists.txt
RTSPCapture/src/: main.cpp
RTSP_Capture/: CMakeLists.txt
RTSP_Capture/src/: main.cpp
Record/: RecordUDP.py  __init__.py
camera/: FileServer.py  Record.py  __init__.py
capture/: CMakeLists.txt
capture/include/: capture.hpp
capture/src/: capture.cpp
config/: config.yaml  piconfig.yaml  ports.yaml  record.yaml
detectGPU/: CMakeLists.txt
detectGPU/include/: detectGPU.h  detectGPU.hpp
detectGPU/src/: detectGPU.cpp
libCapture/: CMakeLists.txt
record/: Record.py  __init__.py
src/: CMakeLists.txt  main.cpp
src/CameraCapturePi/: CMakeLists.txt  main.cpp
src/PiCapture/: CMakeLists.txt  main.cpp
src/RTSP_Capture/: CMakeLists.txt  main.cpp  mongoose.c
src/camerapi/: CMakeLists.txt
src/camerapi/include/: camerapi.hpp
src/camerapi/src/: camerapi.cpp
src/capture/: CMakeLists.txt
src/capture/include/: capture.hpp
src/capture/src/: capture.cpp
src/detectGPU/: CMakeLists.txt
src/detectGPU/src/: detectGPU.cpp
src/extractVideo/: CMakeLists.txt
src/extractVideo/include/: extractVideo.hpp
src/extractVideo/src/: extractVideo.cpp
src/mongoose/: CMakeLists.txt  mongoose.c
src/picapture/: CMakeLists.txt  main.cpp
src/piframe/: CMakeLists.txt
src/streamCapture/: CMakeLists.txt
src/streamCapture/include/: streamCapture.hpp
src/streamCapture/src/: streamCapture.cpp
streamCapture/: CMakeLists.txt
streamCapture/include/: streamCapture.hpp
streamCapture/src/: streamCapture.cpp
