cmake_minimum_required(VERSION 3.0.0)
project(capture)

find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_library(capture STATIC src/capture.cpp)
# add_library(captureStatic SHARED src/capture.cpp)
# set_target_properties(captureStatic PROPERTIES OUTPUT_NAME capture)
target_include_directories(capture PUBLIC include)
target_link_libraries(capture ${OpenCV_LIBS})